[tool.poetry]
name = 'expandvars'
version = '0.11.0'
description = 'Expand system variables Unix style'
license = 'MIT'
keywords = [
    'expand',
    'system',
    'variables',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
    'Topic :: Software Development',
    'Operating System :: MacOS',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: Microsoft',
]
homepage = 'https://github.com/sayanarijit/expandvars'
authors = ['Arijit Basu <sayanarijit@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '>=3.6'

[tool.poetry.dev-dependencies]
tox = '*'
pytest = '*'
pytest-cov = '*'

[tool.poetry.extras]
testing = [
    'pytest',
    'pytest-cov',
    'toml',
]

[tool.pytest]
addopts = '--cov --cov-report=html --cov-fail-under=100'
