[project]
name = 'expandvars'
version = '0.12.0'
description = 'Expand system variables Unix style'
keywords = [
    'expand',
    'system',
    'variables',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Other Audience',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
    'Topic :: Software Development',
    'Operating System :: MacOS',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: Microsoft',
]
homepage = 'https://github.com/sayanarijit/expandvars'
authors = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com"}
]
maintainers = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com"}
]
readme = 'README.md'
license = {file = "LICENSE"}
requires-python = ">=3"

[project.urls]
"Homepage" = "https://github.com/sayanarijit/expandvars"

[project.optional-dependencies]
tests = ['tox', 'pytest', 'pytest-cov', 'toml']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = '--cov --cov-report=html --cov-fail-under=100'
