[project]
dynamic = ["version"]
name = 'expandvars'
description = 'Expand system variables Unix style'
keywords = ['expand', 'system', 'variables']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Other Audience',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Topic :: Utilities',
  'Topic :: Software Development',
  'Operating System :: MacOS',
  'Operating System :: Unix',
  'Operating System :: POSIX',
  'Operating System :: Microsoft',
]
homepage = 'https://github.com/sayanarijit/expandvars'
authors = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
maintainers = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
readme = 'README.md'
license = { file = "LICENSE" }
requires-python = ">=3.6.2"

[project.urls]
"Homepage" = "https://github.com/sayanarijit/expandvars"

[project.optional-dependencies]
tests = ['tox', 'pytest', 'pytest-cov', 'black']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "expandvars.py"

[tool.pytest]
addopts = '--cov --cov-report=html --cov-fail-under=100'
